# phase1

./: README.md  main.py  pyproject.toml  test_main_functionality.py
.specify/memory/: constitution.md
history/prompts/001-console-todo/: 1-create-phase-i-todo-spec.spec.prompt.md  1-plan-phase-i-todo-app.plan.prompt.md  2-tasks-generation-todo-app.tasks.prompt.md
history/prompts/constitution/: 1-update-project-constitution.constitution.prompt.md
history/prompts/general/: 001-complete-todo-app-implementation.general.prompt.md  1-implement-necessary-components.general.prompt.md
specs/001-console-todo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-console-todo/checklists/: requirements.md
specs/001-console-todo/contracts/: cli-contracts.md
src/cli/: cli_app.py
src/models/: todo.py
src/repositories/: todo_repository.py
src/services/: todo_service.py
src/utils/: exceptions.py  validators.py
tests/integration/: cli_integration_test.py
tests/unit/: test_cli_app.py  test_error_handling.py  test_todo_service.py
