[project]
name = "todo-app"
version = "0.1.0"
description = "Phase I - In-Memory Python Console Todo App"
authors = [
    {name = "Developer", email = "dev@example.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]